feito as paginas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=0.6">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estacionamento HT</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -11,18 +11,18 @@
     <h1>Estacionamento</h1>
     <div id="imagens">
         
-            <figure>
+            <a href="./views/Entrada.html"><figure>
                 <img src="./img/estacionamento.png" alt="entrada" id="imgEntrada">
-                <figcaption>Formulário de Entrada de Veículos</figcaption>
-            </figure>
-            <figure>
+                <figcaption>Formulário de Cadastro de Entrada de Veículos</figcaption>
+            </figure></a>
+            <a href="./views/ListadeCarros.html"><figure>
                 <img src="./img/procurando.png" alt="listadecarros" id="imgLista">
                 <figcaption>Lista de Veículos Reistrados</figcaption>
-            </figure>
-            <figure>
+            </figure></a>
+            <a href="./views/Saida.html"><figure>
                 <img src="./img/assinando.png" alt="saidadecarros" id="imgSaida">
                 <figcaption>Formulário de Saída de Veículos com a cobrança de permanencia</figcaption>
-            </figure>
+            </figure></a>
 
        
     </div>
